2019-11-05  Martin Sebor  <msebor@redhat.com>

	PR middle-end/92333
	PR middle-end/82608
	* tree-vrp.c (vrp_prop::check_array_ref): Handle VLAs with constant
	size.
	* tree-ssa-ccp.c (fold_builtin_alloca_with_align): Use a meaninful
	name and location for a temporary variable.

2019-11-05  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.c (value_range::value_range): Fix whitespace.
	(defined_ranges_p): Same.
	(range_fold_binary_symbolics_p): Same.
	(value_range::intersect_helper): Same.
	(value_range::union_helper): Same.
	* tree-vrp.h (range_fold_binary_expr): Same.

2019-11-04  Martin Sebor  <msebor@redhat.com>

	PR middle-end/92341
	PR middle-end/82612
	* tree-sra.c (get_access_for_expr): Fail for out-of-bounds offsets.
	* tree-vrp.c (vrp_prop::check_array_ref): Correct index and text
	of message printed in a warning for empty arrays.
	(vrp_prop::check_mem_ref): Also handle function parameters and
	empty arrays.

2019-11-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92371
	* tree-vect-loop.c (vectorizable_reduction): Set STMT_VINFO_REDUC_DEF
	on the original stmt of live stmts in the chain.
	(vectorizable_live_operation): Look at the original stmt when
	checking STMT_VINFO_REDUC_DEF.

2019-11-05  Aldy Hernandez  <aldyh@redhat.com>

	* gimple-fold.c, gimple-loop-versioning.cc,
	gimple-ssa-evrp-analyze.[ch], gimple-ssa-evrp.c,
	gimple-ssa-sprintf.c, ipa-cp.c, ipa-prop.c, ipa-prop.h,
	range-op.[hc]*, range.[hc]*, selftest.h, tree-ssa-dom.c,
	tree-ssa-strlen.c, tree-ssa-threadedge.c, tree-ssanames.[hc],
	tree-vrp.[hc], vr-values.[hc]: Global rename of value_range to
	value_range_equiv, and value_range_base to value_range.

2019-11-05  Matthew Malcomson  <matthew.malcomson@arm.com>

	* expr.c (build_personality_function): Fix generated type to
	match actual personality functions.

2019-11-05  Matthew Malcomson  <matthew.malcomson@arm.com>

	* config/aarch64/aarch64.c (aarch64_handle_attr_cpu): Allocate
	enough bytes for the NULL character.
