@@ -1,3 +1,8 @@
+2019-11-05  Jim Wilson  <jimw@sifive.com>
+
+	PR middle-end/92263
+	* gcc.dg/pr92263.c: New.
+
 2019-11-05  Martin Sebor  <msebor@redhat.com>
 
 	PR middle-end/92333
