@@ -1,3 +1,9 @@
+2019-11-05  Jim Wilson  <jimw@sifive.com>
+
+	PR middle-end/92263
+	* expr.c (emit_move_complex): Only use BLOCK_OP_NO_LIBCALL when
+	optimize_insn_for_speed_p is true.
+
 2019-11-05  Martin Sebor  <msebor@redhat.com>
 
 	PR middle-end/92333
